--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
                 <article class="service-card" >
                     <div class="icon-404">
-                     <img src="../img/codificacion.png" alt="404">
+                     <img src="./img/codificacion.png" alt="404">
                 </div>        
                  <h3 id="Proximamente">Proximamente... conoce nuetro BLOG para emprendedores y PyMEs</H3>
                 </article>    
@@ -233,4 +233,5 @@
     <script src="./js/script.js"></script>
 
 </body>
+
 </html>
