--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="IDeA ofrece soluciones de marketing digital personalizadas para PyMEs. ¡Impulsa tu negocio con SEO, gestión de redes sociales, diseño de logotipos y publicidad digital!">
+    <meta name="description" content="content="Ahorra tiempo en la gestión, análisis y publicidad de tus redes sociales. Programa publicaciones. REGÍSTRATE AHORA Y UTILÍZALA GRATIS">
     <title>IDeA</title>
     <link rel="icon" type="image/png" href="./img/idea 2025 LOGO-3.png">
     <link rel="stylesheet" href="./css/style.css">
@@ -235,3 +235,4 @@
 </body>
 
 </html>
+
