--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
                     <div class="form-container">
                         <iframe id="form" title="Formulario de Contacto" src="https://docs.google.com/forms/d/e/1FAIpQLSckkX7SkVw56CUp9Cq9spcpYGx_ZvvruO9mBJXdqVT592C2DQ/viewform?embedded=true">Cargando…</iframe>
                     </div>
-                    <p class="contact-info">O encuéntranos en: tuideamex@gmail.com</p>
+                    <p class="contact-info">ó encuéntranos en: tuideamex@gmail.com</p>
+                    <p class="contact-info" href="https://wa.me/5217713584107?text=Hola,%20vengo%20de%20la%20pagína%20me%20interesan%20sus%20Servicios%20digitales">771 358 4107</p>
                 </div>
             </section>
         </main>
@@ -222,7 +223,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/5215588209044?text=Hola,%20me%20interesan%20sus%20Servicios%20digitales"
+    <a href="https://wa.me/5217713584107?text=Hola,%20vengo%20de%20la%20pagína%20me%20interesan%20sus%20Servicios%20digitales"
     class="btn-whatsapp"
     target="_blank"
     aria-label="Contactar por WhatsApp">
@@ -235,4 +236,5 @@
 </body>
 
 </html>
+
 
